...
                }
                .launchIn(viewModelScope)
        }

        suspend fun createTask(): Boolean {
            if (title.isEmpty()) {
                titleError = "Title is required"
                return false
            } else {
                titleError = null
            }

            val task =
...
